--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width'>
-    <title>Crypto Loss/Gain Calculator,</title>
+    <title>Crypto Coins Calculator,</title>
     <style>
         body {
             margin: 0;
@@ -46,10 +46,10 @@
     </div>
 
     <div style="padding-left:16px">
-        <h2> Crypto Loss/Gain Calculator,</h2>
-        <p>Crypto Loss/Gain Calculator,
+        <h2> Crypto Coins Calculator,</h2>
+        <p>Crypto Coins Calculator,
 
-            Crypto Loss/Gain Calculator is the great way to calculate your profit!
+            Crypto Coins Calculator is the great way to calculate your profit!
             Everyone loss in Crypto World. Still, this is an invesment for long term.</p>
 
         <p> For more information, please do not hesitate to contact with stelselim.devs@gmail.com</p>
