--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width'>
+
     <title>Crypto Coins Calculator,</title>
     <style>
         body {
@@ -42,7 +43,7 @@
         <a class="active" href="#home">Home</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a href="./app-ads.txt">Ads Text</a>
     </div>
 
     <div style="padding-left:16px">
