--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a class="active" href="#home">Home</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
-        <a href="./app-ads.txt">Ads Text</a>
+        <a href="app-ads.txt">Ads Text</a>
     </div>
 
     <div style="padding-left:16px">
